--- a/tasks/SPARK/pom.xml
+++ b/tasks/SPARK/pom.xml
@@ -1,10 +1,10 @@
 <project>
-    <groupId>edu.berkeley</groupId>
-    <artifactId>simple-project</artifactId>
+    <groupId>org.humancellatlas</groupId>
+    <artifactId>kmer</artifactId>
     <modelVersion>4.0.0</modelVersion>
-    <name>Simple Project</name>
+    <name>Top Kmers</name>
     <packaging>jar</packaging>
-    <version>1.0</version>
+    <version>0.0</version>
     <dependencies>
         <dependency> <!-- Spark dependency -->
             <groupId>org.apache.spark</groupId>
@@ -15,6 +15,18 @@
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.11</artifactId>
             <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock</artifactId>
+            <version>2.18.0</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
@@ -34,48 +46,11 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>SimpleApp</mainClass>
+                            <mainClass>kmer.Kmer</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
             </plugin>
-            <!--plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.1.0</version>
-                <configuration>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.6</version>
-                <executions>
-                    <execution>
-                        <id>unpack-dependencies</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>unpack-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <excludeScope>system</excludeScope>
-                            <excludes>META-INF/*.SF</excludes>
-                            <excludes>META-INF/*.DSA</excludes>
-                            <excludes>META-INF/*.RSA</excludes>
-                            <excludeGroupIds>junit,org.mockito,org.hamcrest</excludeGroupIds>
-                            <outputDirectory>${project.build.directory}/classes</outputDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin-->
         </plugins>
     </build>
 </project>
