--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,12 @@ python:
 
 install:
 - pip install -r test/requirements-dev.txt
+- find . -name "requirements.txt" | xargs -I @ echo pip install -r  @
 
 before_script:
 # To ignore a directory, we can just delete the directory
 # so that treon doesn't see it.
-- xargs -I @ rm -rf @ < test/ignore
+- xargs -I @ rm -rf $(realpath @) < test/ignore
 
 script:
 - treon
