Better requirements.txt

--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -1,4 +1,3 @@
 hca==6.3.0
-matplotlib==3.1.1
-scanpy[louvain]==1.4.4
-loompy==2.0.17
+-r ../may2019_demo/requirements.txt
+-r ../nov2018_demo/requirements.txt
