Fix `treon` reporting success when tests fail
This is a small change in the `find` call (which should become
entirely irrelevant once treon==0.1.3 is released). From the man
page:

    If the primary expression is punctuated by a plus sign, ...
    [and] any invocation returns a non-zero value as exit status,
    the find utility shall return a non-zero exit status

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,6 @@ before_script:
 
 script:
 # Test that notebooks run successfully
-- find "$PWD" -name "*.ipynb" -exec sh test/test_notebook.sh "{}" \;
+- find "$PWD" -name "*.ipynb" -exec sh test/test_notebook.sh "{}" +
 # Naive test to check that output committed with notebook-
 - find . -name "*.ipynb" -exec sh test/test_output.sh "{}" \;
