--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: python
-dist: xenial  # for python3.7+ testing
+dist: bionic
 
 cache: pip
 
 python:
 - 3.6
 - 3.7
-- 3.8-dev
+- 3.8
 
 install:
 # numpy requires some additional dependencies
