--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,21 @@
 language: python
-dist: xenial  # for python3.7+ testing
+dist: bionic
+
+cache: pip
 
 python:
 - 3.6
 - 3.7
-- 3.8-dev
 
 install:
 # numpy requires some additional dependencies
 - sudo apt-get update
 - sudo apt-get install libblas-dev liblapack-dev libatlas-base-dev gfortran libhdf5-dev
 - pip install -r test/requirements-dev.txt
-- find . -name "requirements.txt" -exec pip install -r "{}" \;
-
-before_script:
-# To ignore a directory, we can just delete the directory
-# so that treon doesn't see it.
-- xargs -t rm -rf < test/ignore
+- find . -name "requirements.txt" | tr '\n' '\0' | xargs -0 -n1 pip install -r
 
 script:
 # Test that notebooks run successfully
-- find "$PWD" -name "*.ipynb" -exec sh test/test_notebook.sh "{}" +
+- eval "treon $(awk '{printf " --exclude " $0}' test/ignore)"
 # Naive test to check that output committed with notebook-
-- find . -name "*.ipynb" -exec sh test/test_output.sh "{}" \;
+- find . -name "*.ipynb" | tr '\n' '\0' | xargs -0 -n1 sh test/test_output.sh
