add intermediate loom/matrix files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
-may2019_demo/pancreas.loom
 .ipynb_checkpoints/
+download-any-bam-file/Aligned.sortedByCoord.out.bam
+download-smartseq2-matrix-scanpy/matrix.results
+download-smartseq2-matrix-scanpy/matrix.tsv
+download-smartseq2-matrix-scanpy/matrix2.results
+download-smartseq2-matrix-scanpy/matrix2.tsv
+explore-hca-dataset-scanpy-may-2019/pancreas.loom
