--- a/SPARK Example/pom.xml
+++ b/SPARK Example/pom.xml
@@ -12,6 +12,11 @@
             <version>2.4.4</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.10</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.11</artifactId>
             <version>2.4.4</version>
